gap solved

--- a/src/app/styles.css
+++ b/src/app/styles.css
@@ -245,63 +245,62 @@ p {
   display: none;
 }
 
-.mobile-slider{
+.mobile-slider {
   width: 100vw;
   height: 100vh;
   background-color: #f9f6f3;
 }
 
-.mobile{
+.mobile {
   display: none;
 }
- 
-#main{
+
+#main {
   position: relative;
-max-width: 100vw;
-height:100vh;
-bottom: 1%;
-/* background-color: #f2a0a0; */
+  max-width: 100vw;
+  height: 100vh;
+  bottom: 1%;
+  /* background-color: #f2a0a0; */
 }
-#top{
+#top {
   position: absolute;
-  top:0%;
+  top: 0%;
   width: 100%;
-  height: 50vh;
+  height: 55vh;
   background-color: #212121;
+ 
 }
 
-#bottom{
+#bottom {
   position: absolute;
-  bottom:0%;
-  width:100%;
-  height:50vh;
- 
+  bottom: 0%;
+  width: 100%;
+  height: 50vh;
 }
-#center{
-  width:100%;
-  height:200vh;
+#center {
+  width: 100%;
+  height: 200vh;
   background-color: white;
 }
 
-.mobile-strength{
+.mobile-strength {
   display: none;
 }
-.navbar-image{
+.navbar-image {
   display: flex;
   justify-content: center;
   align-items: center;
   min-width: 150px;
 }
 @media (max-width: 400px) {
-
-  .navbar-image{
+  .navbar-image {
     min-width: 109px;
   }
 
-  .mobile-strength{
+  .mobile-strength {
     display: flex;
   }
-  .laptop{
+  .laptop {
     display: none;
   }
   .about {
@@ -315,7 +314,7 @@ bottom: 1%;
     display: flex;
     flex-direction: column;
   }
-  .none{
+  .none {
     display: none;
   }
   .about1 {
@@ -385,12 +384,12 @@ bottom: 1%;
     transform: rotate(30deg);
   }
 
-  .mobile{ 
+  .mobile {
     display: flex;
     flex-direction: column;
     background-color: #f9f6f3;
   }
-  .sliderm{
+  .sliderm {
     margin: 20px 0px;
     display: flex;
     flex-direction: column;
@@ -399,8 +398,9 @@ bottom: 1%;
     gap: 20px;
   }
 
-  .mobile-card{
-    background: url("https://i.ibb.co/dLk8nrW/Photo-1.png") no-repeat center center/cover;
+  .mobile-card {
+    background: url("https://i.ibb.co/dLk8nrW/Photo-1.png") no-repeat center
+      center/cover;
     height: 492.31px;
     width: 320px;
     display: flex;
@@ -409,9 +409,10 @@ bottom: 1%;
     gap: 20px;
   }
 
-  .mobile-card1{
-    background: url("https://i.ibb.co/rQVnqkN/Photo-2.png") no-repeat center center/cover;
-    height:492.31px;
+  .mobile-card1 {
+    background: url("https://i.ibb.co/rQVnqkN/Photo-2.png") no-repeat center
+      center/cover;
+    height: 492.31px;
     width: 320px;
     display: flex;
     flex-direction: column;
@@ -419,74 +420,78 @@ bottom: 1%;
     gap: 20px;
   }
 
-  .mobile-card2{
-    background: url("https://i.ibb.co/x76KyJW/Photo-3.png") no-repeat center center/cover;
-    height:492.31px;
+  .mobile-card2 {
+    background: url("https://i.ibb.co/x76KyJW/Photo-3.png") no-repeat center
+      center/cover;
+    height: 492.31px;
     width: 320px;
     display: flex;
     flex-direction: column;
     justify-content: center;
     gap: 20px;
   }
-  .mobile-card3{
-    background: url("https://i.ibb.co/YDmpwyN/Photo-4.png") no-repeat center center/cover;
-    height:492.31px;
+  .mobile-card3 {
+    background: url("https://i.ibb.co/YDmpwyN/Photo-4.png") no-repeat center
+      center/cover;
+    height: 492.31px;
     width: 320px;
     display: flex;
     flex-direction: column;
     justify-content: center;
     gap: 20px;
   }
-  .mobile-card4{
-    background: url("https://i.ibb.co/QpCWhdn/Photo-5.png") no-repeat center center/cover;
-    height:492.31px;
+  .mobile-card4 {
+    background: url("https://i.ibb.co/QpCWhdn/Photo-5.png") no-repeat center
+      center/cover;
+    height: 492.31px;
     width: 320px;
     display: flex;
     flex-direction: column;
     justify-content: center;
     gap: 20px;
   }
-  .mobile-card5{
-    background: url("https://i.ibb.co/dt8Xwsr/Photo-6.png") no-repeat center center/cover;
-    height:492.31px;
+  .mobile-card5 {
+    background: url("https://i.ibb.co/dt8Xwsr/Photo-6.png") no-repeat center
+      center/cover;
+    height: 492.31px;
     width: 320px;
     display: flex;
     flex-direction: column;
     justify-content: center;
     gap: 20px;
   }
-  .mobile-card-text{
+  .mobile-card-text {
     font-weight: 500;
-    font-size:37px ;  
+    font-size: 37px;
     color: #ffffff;
     line-height: 51.69px;
     width: 165px;
   }
-  .mobile-card-button{
-   height: 32.31px;
-   width: 127.38px;
-   padding:6.15px, 19.69px, 6.15px, 19.69px;
-   border: 1px solid #ffffff;
-   color: #FFFFFF;
-   font-size: 12.31px;
-   margin-top: 10px;
+  .mobile-card-button {
+    height: 32.31px;
+    width: 127.38px;
+    padding: 6.15px, 19.69px, 6.15px, 19.69px;
+    border: 1px solid #ffffff;
+    color: #ffffff;
+    font-size: 12.31px;
+    margin-top: 10px;
   }
-  .bubu{
+  .bubu {
     transform: translate(33px, 64px);
   }
 
-  .i89{
+  .i89 {
     transform: translateX(-9px);
   }
-  #top{
+  #top {
     display: none;
   }
 }
-.i78{
+.i78 {
   position: relative;
   left: -24px;
 }
-.hero-section{
+.hero-section {
   max-width: 100vw;
 }
 /* Circular Slider */
@@ -554,6 +559,17 @@ bottom: 1%;
   z-index: 1000;
 }
 
+.overlay_on_slider span {
+  font-size: 60px;
+  font-weight: 500;
+  line-height: 84px;
+  max-width: 159px;
+}
+.overlay_on_slider span img {
+  min-width: 234px;
+  transform: translateX(-10px);
+}
+
 .overlay_on_slider_right {
   position: absolute;
   bottom: 0;
@@ -569,6 +585,13 @@ bottom: 1%;
   font-size: xx-large;
 }
 
+.overlay_on_slider_right span {
+  font-size: 155px;
+  opacity: 0.2;
+  font-weight: 800;
+  transform: translate(10px, 50px);
+}
+
 .view_products {
   border: 1px solid white;
   padding: 4px 20px;
@@ -581,4 +604,3 @@ bottom: 1%;
   position: relative;
   max-width: 100vw;
 }
- 
